updating notes in code

--- a/music.html
+++ b/music.html
@@ -7,17 +7,19 @@
     <meta name="description" content=" Webpage for Danni Frotos music, portraits and circus photography">
     <meta name="keywords"
         content="photography, ireland, music, portraits, circus, irish photographer, pit photographer">
-
+<title>Danni Frotography</title> 
     <link rel="stylesheet" href="assets/css/style.css">
 
 </head>
 
 <body>
 
+<!-- Header -->
+
     <header>
 
         <img id="logo" src="assets/images/dannifrotologo.png" alt="Danni Froto Logo">
-
+<h3>Music Photography</h3> 
         <nav id="menu">
             <ul>
                 <li>
@@ -44,6 +46,8 @@
 
     </header>
 
+<!-- Music gallery -->
+
     <section>
         <div id="music-gallery" class="gallery">
 
@@ -55,6 +59,8 @@
 
     </section>
 
+    <!-- about Danni Froto music photography -->
+
     <section>
         <div id="music-about">
             <h1 style="color: white;">
@@ -65,23 +71,25 @@
         </div>
     </section>
 
+<!-- Footer -->
+
     <footer class="footer">
         <ul id="footer-icons">
 
             <li id="instagram">
                 <a href="https://www.instagram.com/dannifroto/" target="_blank">
-                    <img id="instagram" src="assets/images/socials/insta-logo.png" alt="instagram">
+                    <img id="insta" src="assets/images/socials/insta-logo.png" alt="instagram">
                 </a>
             </li>
 
             <li id="facebook">
                 <a href="https://www.facebook.com/DanniFroto" target="_blank">
-                    <img id="facebook" src="assets/images/socials/facebook-logo.png" alt="facebook">
+                    <img id="fb" src="assets/images/socials/facebook-logo.png" alt="facebook">
                 </a>
             </li>
 
             <li id="contact"> <a href="contact.html">
-                    <img id="contact" src="assets/images/socials/contact.png" alt="Contact Me">
+                    <img id="contactme" src="assets/images/socials/contact.png" alt="Contact Me">
                 </a>
             </li>
 
