--- a/thank-you-message.html
+++ b/thank-you-message.html
@@ -71,23 +71,24 @@ or while you wait for a response, why not check out my gallerys:</p>
 </section>
 
 </section>
-<footer style="background-color: white;">
+
+<footer class="footer">
     <ul id="footer-icons">
 
         <li id="instagram">
             <a href="https://www.instagram.com/dannifroto/" target="_blank">
-                <img id="instagram" src="assets/images/socials/insta-logo.png" alt="instagram">
+                <img id="insta" src="assets/images/socials/insta-logo.png" alt="instagram">
             </a>
         </li>
 
         <li id="facebook">
             <a href="https://www.facebook.com/DanniFroto" target="_blank">
-                <img id="facebook" src="assets/images/socials/facebook-logo.png" alt="facebook">
+                <img id="fb" src="assets/images/socials/facebook-logo.png" alt="facebook">
             </a>
         </li>
 
         <li id="contact"> <a href="contact.html">
-                <img id="contact" src="assets/images/socials/contact.png" alt="Contact Me">
+                <img id="contactme" src="assets/images/socials/contact.png" alt="Contact Me">
             </a>
         </li>
 
