--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-
+<!-- Head -->
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,9 +10,11 @@
 
     <link rel="stylesheet" href="assets/css/style.css">
 
-    <title>Danni Frotography</title>
+    <title id="title">Danni Frotography</title>
 
 </head>
+
+<!-- Header -->
 
 <body>
 
@@ -46,13 +48,20 @@
 
     </header>
 
+<!-- Body of page -->
 
     <div class="content">
         <section id="bio">
+
+            <!-- Profile photo -->
+
             <div id="profile-photo">
                 <img src="assets/images/danni-froto-image.jpg" alt="Photo of Danni Froto in Black and White">
             </div>
             <div id="bio-line">
+
+                <!-- Bio title -->
+
                 <h1>Capturing Memories . . .</h1>
                 <br>
                 <p>Dublin, Ireland based photographer with an eye for turning moments into memories you can look at
@@ -69,10 +78,10 @@
             </div>
         </section>
 
-        <section class="main-section">
-            <p></p>
-        </section>
+      
     </div>
+
+<!-- Footer -->
 
     <footer class="footer">
         <ul id="footer-icons">
