--- a/circus.html
+++ b/circus.html
@@ -7,7 +7,7 @@
     <meta name="description" content=" Webpage for Danni Frotos music, portraits and circus photography">
     <meta name="keywords"
         content="photography, ireland, music, portraits, circus, irish photographer, pit photographer">
-
+        <link rel="icon" href="assets/images/favicon/favicon-32x32.png" type="image/x-icon">
     <link rel="stylesheet" href="assets/css/style.css">
 
     <title>Danni Frotography</title>
@@ -15,6 +15,8 @@
 </head>
 
 <body>
+
+    <!-- header -->
 
     <header>
 
@@ -46,6 +48,8 @@
 
     </header>
 
+    <!-- circus photo gallery  -->
+
     <section>
         <div id="circus-gallery" class="gallery">
             <img src="assets/images/circus/circus-1.jpg" alt="Aerial Artist doing a split on a hoop">
@@ -57,6 +61,8 @@
 
     </section>
 
+    <!-- about circus photography -->
+
     <section>
         <div id="circus-about">
             <h1 style="color: white;">
@@ -67,23 +73,25 @@
         </div>
     </section>
 
+    <!-- footer-->
+
     <footer class="footer">
         <ul id="footer-icons">
 
             <li id="instagram">
                 <a href="https://www.instagram.com/dannifroto/" target="_blank">
-                    <img id="insta" src="assets/images/socials/insta-logo.png" alt="instagram">
+                    <img id="instagram_img" src="assets/images/socials/insta-logo.png" alt="instagram">
                 </a>
             </li>
 
             <li id="facebook">
                 <a href="https://www.facebook.com/DanniFroto" target="_blank">
-                    <img id="fb" src="assets/images/socials/facebook-logo.png" alt="facebook">
+                    <img id="facebook_img" src="assets/images/socials/facebook-logo.png" alt="facebook">
                 </a>
             </li>
 
             <li id="contact"> <a href="contact.html">
-                    <img id="contactme" src="assets/images/socials/contact.png" alt="Contact Me">
+                    <img id="contact_img" src="assets/images/socials/contact.png" alt="Contact Me">
                 </a>
             </li>
 
