--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <!-- Head -->
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,7 +11,7 @@
         content="photography, ireland, music, portraits, circus, irish photographer, pit photographer">
 
     <link rel="stylesheet" href="assets/css/style.css">
-
+    <link rel="icon" href="assets/images/favicon/favicon-32x32.png" type="image/x-icon">
     <title id="title">Danni Frotography</title>
 
 </head>
@@ -88,18 +90,18 @@
 
             <li id="instagram">
                 <a href="https://www.instagram.com/dannifroto/" target="_blank">
-                    <img id="instagram" src="assets/images/socials/insta-logo.png" alt="instagram">
+                    <img id="instagram_img" src="assets/images/socials/insta-logo.png" alt="instagram">
                 </a>
             </li>
 
             <li id="facebook">
                 <a href="https://www.facebook.com/DanniFroto" target="_blank">
-                    <img id="facebook" src="assets/images/socials/facebook-logo.png" alt="facebook">
+                    <img id="facebook_img" src="assets/images/socials/facebook-logo.png" alt="facebook">
                 </a>
             </li>
 
             <li id="contact"> <a href="contact.html">
-                    <img id="contact" src="assets/images/socials/contact.png" alt="Contact Me">
+                    <img id="contact_img" src="assets/images/socials/contact.png" alt="Contact Me">
                 </a>
             </li>
 
