--- a/portraits.html
+++ b/portraits.html
@@ -7,7 +7,7 @@
     <meta name="description" content=" Webpage for Danni Frotos music, portraits and circus photography">
     <meta name="keywords"
         content="photography, ireland, music, portraits, circus, irish photographer, pit photographer">
-
+        <link rel="icon" href="assets/images/favicon/favicon-32x32.png" type="image/x-icon">
     <link rel="stylesheet" href="assets/css/style.css">
 
     <title>Danni Frotography</title>
@@ -15,6 +15,9 @@
 </head>
 
 <body>
+
+        <!-- header -->
+
 
     <header>
 
@@ -46,6 +49,9 @@
 
     </header>
 
+        <!-- portrait gallery -->
+
+
     <section>
         <div id="portrait-gallery" class="gallery">
             <img src="assets/images/portraits/fahri-mac.jpg" alt="Portrait of Fahri Mac">
@@ -56,33 +62,37 @@
 
     </section>
 
+    <!-- about Danni Froto portrait photography -->
+
     <section>
         <div id="portrait-about">
             <h1 style="color: white;">
-                "Something I discovered later in my photgraphy career was the art of capturing someone in a more vunerable and true state, I hope to express that within the portraits I capture.""
+                "Something I discovered later in my photgraphy career was the art of capturing someone in a more vunerable and true state, I hope to express that within the portraits I capture."
             </h1>
             <br>
             <br>
         </div>
     </section>
 
+    <!-- footer -->
+
     <footer class="footer">
         <ul id="footer-icons">
 
             <li id="instagram">
                 <a href="https://www.instagram.com/dannifroto/" target="_blank">
-                    <img id="insta" src="assets/images/socials/insta-logo.png" alt="instagram">
+                    <img id="instagram_img" src="assets/images/socials/insta-logo.png" alt="instagram">
                 </a>
             </li>
 
             <li id="facebook">
                 <a href="https://www.facebook.com/DanniFroto" target="_blank">
-                    <img id="fb" src="assets/images/socials/facebook-logo.png" alt="facebook">
+                    <img id="facebook_img" src="assets/images/socials/facebook-logo.png" alt="facebook">
                 </a>
             </li>
 
             <li id="contact"> <a href="contact.html">
-                    <img id="contactme" src="assets/images/socials/contact.png" alt="Contact Me">
+                    <img id="contact_img" src="assets/images/socials/contact.png" alt="Contact Me">
                 </a>
             </li>
 
