--- a/thank-you-message.html
+++ b/thank-you-message.html
@@ -9,10 +9,12 @@
         content="photography, ireland, music, portraits, circus, irish photographer, pit photographer">
 
     <link rel="stylesheet" href="assets/css/style.css">
-
+    <link rel="icon" href="assets/images/favicon/favicon-32x32.png" type="image/x-icon">
     <title>Danni Frotography</title>
 
 </head>
+
+<!-- header-->
 
 <header>
 
@@ -45,6 +47,9 @@
 
 </header>
 
+<!-- thank you page section-->
+
+
 <section id="thank-you-page-text">
     <br>
     <p> Thank you for sending your message! I'll get back to you as soon as I can. </p>
@@ -70,25 +75,26 @@ or while you wait for a response, why not check out my gallerys:</p>
 
 </section>
 
-</section>
+
+<!-- footer-->
 
 <footer class="footer">
     <ul id="footer-icons">
 
         <li id="instagram">
             <a href="https://www.instagram.com/dannifroto/" target="_blank">
-                <img id="insta" src="assets/images/socials/insta-logo.png" alt="instagram">
+                <img id="instagram_img" src="assets/images/socials/insta-logo.png" alt="instagram">
             </a>
         </li>
 
         <li id="facebook">
             <a href="https://www.facebook.com/DanniFroto" target="_blank">
-                <img id="fb" src="assets/images/socials/facebook-logo.png" alt="facebook">
+                <img id="facebook_img" src="assets/images/socials/facebook-logo.png" alt="facebook">
             </a>
         </li>
 
         <li id="contact"> <a href="contact.html">
-                <img id="contactme" src="assets/images/socials/contact.png" alt="Contact Me">
+                <img id="contact_img" src="assets/images/socials/contact.png" alt="Contact Me">
             </a>
         </li>
 
