--- a/contact.html
+++ b/contact.html
@@ -8,12 +8,14 @@
     <meta name="keywords" content="photography, ireland, music, portraits, circus, irish photographer, pit photographer">
 
     <link rel="stylesheet" href="assets/css/style.css">
-
+    <link rel="icon" href="assets/images/favicon/favicon-32x32.png" type="image/x-icon">
     <title>Danni Frotography</title>
 
 </head>
 
 <body>
+
+    <!-- header -->
 
     <header>
 
@@ -44,6 +46,8 @@
 
     </header>
 
+    <!-- contact form -->
+
     <section>
 
 
@@ -55,7 +59,7 @@
             <label for="surname">Surname:</label>
             <input type="text" id="surname" name="surname" required placeholder="Enter your surname">
 
-            <p>Enquiry:</p>
+            <h4>Enquiry:</h4>
             <label>
                 <input type="checkbox" name="enquiry" value="music">
                 Music
@@ -73,34 +77,38 @@
                 Other
             </label>
 
+            <label for="email">Email:</label>
+            <input type="email" id="email" name="email" required placeholder="Enter your email">
+
             <label for="message">Message:</label>
             <textarea id="message" name="message" rows="4" required placeholder="Enter your message"></textarea>
 
-            <label for="email">Email:</label>
-            <input type="email" id="email" name="email" required placeholder="Enter your email">
+            
 
             <input type="submit" value="Submit">
         </form>
 
     </section>
 
+    <!-- footer-->
+
     <footer class="footer">
         <ul id="footer-icons">
 
             <li id="instagram">
                 <a href="https://www.instagram.com/dannifroto/" target="_blank">
-                    <img id="insta" src="assets/images/socials/insta-logo.png" alt="instagram">
+                    <img id="instagram_img" src="assets/images/socials/insta-logo.png" alt="instagram">
                 </a>
             </li>
 
             <li id="facebook">
                 <a href="https://www.facebook.com/DanniFroto" target="_blank">
-                    <img id="fb" src="assets/images/socials/facebook-logo.png" alt="facebook">
+                    <img id="facebook_img" src="assets/images/socials/facebook-logo.png" alt="facebook">
                 </a>
             </li>
 
             <li id="contact"> <a href="contact.html">
-                    <img id="contactme" src="assets/images/socials/contact.png" alt="Contact Me">
+                    <img id="contact_img" src="assets/images/socials/contact.png" alt="Contact Me">
                 </a>
             </li>
 
