--- a/music.html
+++ b/music.html
@@ -7,6 +7,7 @@
     <meta name="description" content=" Webpage for Danni Frotos music, portraits and circus photography">
     <meta name="keywords"
         content="photography, ireland, music, portraits, circus, irish photographer, pit photographer">
+        <link rel="icon" href="assets/images/favicon/favicon-32x32.png" type="image/x-icon">
 <title>Danni Frotography</title> 
     <link rel="stylesheet" href="assets/css/style.css">
 
@@ -19,7 +20,7 @@
     <header>
 
         <img id="logo" src="assets/images/dannifrotologo.png" alt="Danni Froto Logo">
-<h3>Music Photography</h3> 
+
         <nav id="menu">
             <ul>
                 <li>
@@ -64,37 +65,37 @@
     <section>
         <div id="music-about">
             <h1 style="color: white;">
-                "Music was the first subject I picked up a camera to shoot. Since then I have been lucky enough to capture artists from across the world doing what they do best!""
+                "Music was the first subject I picked up a camera to shoot. Since then I have been lucky enough to capture artists from across the world doing what they do best!"
             </h1>
-            <br>
+
             <br>
         </div>
     </section>
 
 <!-- Footer -->
 
-    <footer class="footer">
-        <ul id="footer-icons">
+<footer class="footer">
+    <ul id="footer-icons">
 
-            <li id="instagram">
-                <a href="https://www.instagram.com/dannifroto/" target="_blank">
-                    <img id="insta" src="assets/images/socials/insta-logo.png" alt="instagram">
-                </a>
-            </li>
+        <li id="instagram">
+            <a href="https://www.instagram.com/dannifroto/" target="_blank">
+                <img id="instagram_img" src="assets/images/socials/insta-logo.png" alt="instagram">
+            </a>
+        </li>
 
-            <li id="facebook">
-                <a href="https://www.facebook.com/DanniFroto" target="_blank">
-                    <img id="fb" src="assets/images/socials/facebook-logo.png" alt="facebook">
-                </a>
-            </li>
+        <li id="facebook">
+            <a href="https://www.facebook.com/DanniFroto" target="_blank">
+                <img id="facebook_img" src="assets/images/socials/facebook-logo.png" alt="facebook">
+            </a>
+        </li>
 
-            <li id="contact"> <a href="contact.html">
-                    <img id="contactme" src="assets/images/socials/contact.png" alt="Contact Me">
-                </a>
-            </li>
+        <li id="contact"> <a href="contact.html">
+                <img id="contact_img" src="assets/images/socials/contact.png" alt="Contact Me">
+            </a>
+        </li>
 
-        </ul>
-    </footer>
+    </ul>
+</footer>
 
 </body>
 
